# rss-glue

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FEATURES.md  PLAN.md  README.md  docker-compose.yml  mise.toml  new_config.json  pyproject.toml  pytest.ini
.github/workflows/: build.yml
docs/: CacheErrorHandling.md  CacheFeedImplementation.md  FeedLocking.md  ImageCachePlan.md  Roadmap.md  YC_DOCS.md  fb.json
rss_glue/: __init__.py  cache.py  cli.py  database.py  instagram_client.py  logger.py  main.py  mongo_cache.py  resources.py  utils.py
rss_glue/feeds/: __init__.py  ai_client.py  ai_filter.py  cache.py  digest.py  facebook.py  feed.py  hackernews.py  instagram.py  merge.py  reddit.py  registry.py  rss.py  smart_filter.py
rss_glue/models/: __init__.py  config.py  db.py
rss_glue/outputs/: __init__.py  artifact.py  html.py  index.py  opml.py  rss.py
rss_glue/routers/: __init__.py  config.py  feeds.py  pages.py
rss_glue/services/: __init__.py  config_sync.py  media_cache.py  rss_output.py  update.py
rss_glue/templates/: base.html  config.html  digest_post.html.jinja  facebook_post.html.jinja  feed.html  hackernews_post.html.jinja  html_page.html.jinja  html_post.html.jinja  index.html  index_link.html.jinja  index_page.html.jinja  (+4 more)
samples/: docker-config.py
tests/: README.md  __init__.py  conftest.py  test_cache_feed.py  test_digest_feed.py  test_facebook_feed.py  test_feed_locking.py  test_generators.py  test_hackernews_feed.py  test_instagram_feed.py  test_merge_feed.py  test_reddit_feed.py  test_rss_feed.py  test_smart_filter.py  test_utils.py
(+8 files in other folders)
