[tool.poetry]
name = "rss-glue"
version = "0.1.0"
description = ""
authors = ["Brandon Davis <git@subdavis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.12.6"
feedgen = "^1.0.0"
click = "^8.1.7"
setuptools = "^75.1.0"
flask = "^3.0.3"
croniter = "^3.0.3"
feedparser = "^6.0.11"
types-croniter = "^3.0.3.20240731"
types-pytz = "^2024.2.0.20241003"
anthropic = "^0.36.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240914"

[tool.poetry.scripts]
rss-glue = "rss_glue.cli:cli"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.11.2"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
