[project]
name = "rss-glue"
version = "2.0.0"
description = "RSS feed aggregator and merger"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlmodel>=0.0.14",
    "jinja2>=3.1.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "croniter>=2.0.0",
    "httpx>=0.26.0",
    "feedgen>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
